# TestMo-API-Client

./: README.md  pyproject.toml  requirements.txt  setup.py
.claude/: CLAUDE.md  settings.json
.claude/skills/new-endpoint/: SKILL.md
.github/workflows/: python-publish.yml  tests.yml
pyTestMoApi/: __init__.py  api_client.py  automation_runs.py  automation_sources.py  errors.py  groups.py  milestones.py  projects.py  roles.py  runs.py  sessions.py  users.py  utils.py
pyTestMoApi/_modules/: __init__.py  _attachments.py  _automation_cases.py  _automation_runs.py  _automation_sources.py  _cases.py  _folders.py  _groups.py  _milestones.py  _projects.py  _results.py  _roles.py  _runs.py  _sessions.py  _users.py
pyTestMoApi/_utils/: __init__.py  _api.py  _bound_api.py  _custom_typing.py  _errors.py  _expands.py  _paginations.py  _utils.py
tests/: test_automation_cases.py  test_build_date.py
