[build-system]
requires = ["setuptools>=77"]
requires-python = ">=3.13"
build-backend = "setuptools.build_meta"

[project]
name = "TestMoApiClient"
version = "0.1.2"
description = "This library is a wrapper for the TestMo REST API"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Serhii Lozytskyi" }
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "requests>=2.34.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/lozik4/TestMo-API-Client"
Repository = "https://github.com/lozik4/TestMo-API-Client"
Issues = "https://github.com/lozik4/TestMo-API-Client/issues"

[dependency-groups]
# Install with: uv sync --group dev
dev = [
    "pytest==9.1.1",
    "ruff==0.15.22",
    "twine==6.2.0",
    "ty==0.0.60"
]

[tool.ruff]
line-length = 120
indent-width = 4
preview = true

exclude = [
    ".env",
    ".pyetst_cache",
    ".venv",
    "__init__.py",
    "__pycache__",
    "tests",
    "docker",
    "env",
    "venv",
    "*.md"
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.format]
preview = true
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-line-length = 80

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["E", "F", "C90", "I", "COM", "ISC", "PT", "Q", "ARG", "PLC", "PLE", "A"]
ignore = ["F403", "F405", "E266", "PT013", "A001"]
fixable = ["ALL"]
unfixable = []
preview = true
explicit-preview-rules = true


[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 3
max-statements = 80


[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false